<resources>
    <string name="app_name">Hipocampo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="directories">Pastas</string>
    <string name="passwords">Senhas</string>
    <string name="add_folder">Nova pasta</string>
    <string name="master_password_dialog_title">Senha Mestre</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="description">Descrição</string>
    <string name="username">Usuário</string>
    <string name="password">Senha</string>
    <string name="observation">Observação</string>
    <string name="show">Mostrar</string>
    <string name="hide">Ocultar</string>
    <string name="save">Salvar</string>
    <string name="delete">Deletar</string>
    <string name="master_password_error_dialog_title">Senha Incorreta</string>
    <string name="master_password_error_dialog_message">A senha informada é incorreta!</string>
    <string name="folder_name_dialog_title">Nome da pasta</string>
    <string name="import_password_file">Importar arquivo de senhas!</string>

</resources>
